# Programvarudesign

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  makefile
include/CharacterManagement/: Character.h  CharacterInterface.h  InteractionType.h
include/GameLogic/: Game.h
include/GameLogic/GameWorld/: InventoryScene.h  Scene.h
include/UI/: UserInterface.h
src/: main.cc
src/CharacterManagement/: Character.cc  CharacterInterface.cc  InputSanitiser.cc  InteractionType.cc
src/CharacterManagement/Interactions/: Taste.cc
src/GameLogic/: Game.cc  PlotEngine.cc
src/GameLogic/GameWorld/: Scene.cc  VolcanoScene.cc  VolcanoScene.cpp
src/GameLogic/GameWorld/GameObjects/: GameObject.cc
src/UI/: UserInterface.cc
tests/: tests.cc
